feat(view): 예외 메시지 출력 화면 구현